feat: Fix markers

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <main id="maincontent">
         <section id="map-container">
             <div id="map"></div>
+
         </section>
+        <div id='map-leaflet' class='map'> </div>
         <section>
             <div class="filter-options">
                 <h2>Filter Results</h2>
