--- a/restaurant.html
+++ b/restaurant.html
@@ -25,8 +25,8 @@
     </header>
 
     <main id="maincontent" role="maincontent">
-        <section id="map-container">
-            <div id="map"></div>
+        <section id="map-container" role="map container">
+            <div id="map" aria-labelledby="map"></div>
         </section>
 
         <section id=filter role="skip">
