--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset='utf-8' />
+    <meta name=viewport content="width=device-width, initial-scale=1">
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
-    <meta name=viewport content="width=device-width, initial-scale=1">
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.css' rel='stylesheet' />
     <title>Restaurant Reviews</title>
 </head>
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <h1><a href="/">Restaurant Reviews</a></h1>
+            <h1><a href="/" tabindex="1">Restaurant Reviews</a></h1>
         </nav>
     </header>
     <!-- ARIA SOURCE LINK: https://www.w3.org/TR/wai-aria-1.1/#aria-label -->
@@ -30,11 +30,11 @@
                 <h2>Filter Results</h2>
 
                 <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-labelledby="neighborhood list"> 
-                    <option value="all">All Neighborhoods</option>
+                    <option value="all" tabindex="2">All Neighborhoods</option>
                 </select>
 
                 <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()" aria-labelledby="cuisines selection">
-                     <option value="all">All Cuisines</option>
+                     <option value="all" tabindex="3">All Cuisines</option>
                 </select>
             </div>
             <ul id="restaurants-list" aria-labelledby="restaurants-list"></ul>
