--- a/restaurant.html
+++ b/restaurant.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset='utf-8' />
+    <meta name=viewport content="width=device-width, initial-scale=1">
     <!-- Normalize.css for better cross-browser consistency -->
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
     <!-- Main CSS file -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
-    <meta name=viewport content="width=device-width, initial-scale=1">
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.css' rel='stylesheet' />
     <title>Restaurant Info</title>
 </head>
@@ -31,8 +31,8 @@
 
         <section id=filter role="skip">
             <section id="restaurant-container" aria-labelledby="restaurant container">
-                <h1 id="restaurant-name"></h1>
-                <img id="restaurant-img" alt="">
+                <h2 id="restaurant-name"></h2>
+                <img id="restaurant-img">
                 <p id="restaurant-cuisine"></p>
                 <p id="restaurant-address"></p>
                 <table id="restaurant-hours" aria-labelledby="restaurant hours"></table>
